--- a/Echange/WebContent/style2.css
+++ b/Echange/WebContent/style2.css
@@ -16,28 +16,33 @@ body {
 	padding:10px;
 	padding-top:30px;
 	padding-bottom:30px;
-	background-color: rgba(8, 18, 20, 0.9 );
+	background-color: rgba(8, 18, 20, 0.7 );
 	color:#ffffff;
-	text-align:center;
+	text-align:left;
 }
 
 body h1 {
 	color:  #a1ebf2;
 	font-size:35px;
 	padding:20px;
-	text-shadow: (2px,2px,2px, black)
+	text-shadow: (2px,2px,2px, black);
+	text-align:center;
 }
 	
 body form{
 	padding:20px;
 	color: #ffffff;
-	text-align:justify;
-	/*text-align:left;
-	padding:20px;*/
+	/*text-align:justify;*/
+	text-align:left;
 }
 	
+li {
+		padding:20px;
+}
 	
-
+nom{
+	text-decoration: underline;
+}
 
 footer{
 	background-color: rgba(8, 18, 20, 0.9 );
